{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 152,
  "lineage": "917e9f71-55eb-bb45-61f2-808b5043c853",
  "resources": [
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c614dee691cbbf37",
            "arn": "arn:aws:ec2:us-east-1:519093654264:instance/i-05f06380b598bd3f2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f06380b598bd3f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-008b17eb134d12b88",
            "private_dns": "ip-10-1-1-226.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.226",
            "public_dns": "ec2-3-83-80-0.compute-1.amazonaws.com",
            "public_ip": "3.83.80.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-077028d2d20d14b5f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0286a5bcd8b1c59ee",
            "tags": {
              "Name": "KlantALoadbalancer"
            },
            "tags_all": {
              "Name": "KlantALoadbalancer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06fda8284ffc6f204"
            ]
          },
          "dependencies": [
            "module.securitygroup.aws_security_group.ssh_http_https_outbound_allow",
            "module.vpc.aws_subnet.Subnet",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.prod[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c614dee691cbbf37",
            "arn": "arn:aws:ec2:us-east-1:519093654264:instance/i-00dbe383531a199ec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00dbe383531a199ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a134c3912f740248",
            "private_dns": "ip-10-1-1-147.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.147",
            "public_dns": "ec2-44-202-105-118.compute-1.amazonaws.com",
            "public_ip": "44.202.105.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0316a7520d713c525",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0286a5bcd8b1c59ee",
            "tags": {
              "Name": "KlantA-ProdWebserver-1"
            },
            "tags_all": {
              "Name": "KlantA-ProdWebserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06fda8284ffc6f204"
            ]
          },
          "dependencies": [
            "module.securitygroup.aws_security_group.ssh_http_https_outbound_allow",
            "module.vpc.aws_subnet.Subnet",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.prod[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c614dee691cbbf37",
            "arn": "arn:aws:ec2:us-east-1:519093654264:instance/i-033e95f38fb82933d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-033e95f38fb82933d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05768f7985f35bc6f",
            "private_dns": "ip-10-1-1-43.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.43",
            "public_dns": "ec2-3-91-217-200.compute-1.amazonaws.com",
            "public_ip": "3.91.217.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02a7663e44668f553",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0286a5bcd8b1c59ee",
            "tags": {
              "Name": "KlantA-ProdWebserver-2"
            },
            "tags_all": {
              "Name": "KlantA-ProdWebserver-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06fda8284ffc6f204"
            ]
          },
          "dependencies": [
            "module.securitygroup.aws_security_group.ssh_http_https_outbound_allow",
            "module.vpc.aws_subnet.Subnet",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.prod[2]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c614dee691cbbf37",
            "arn": "arn:aws:ec2:us-east-1:519093654264:instance/i-0b952761067ef846c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b952761067ef846c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e22b8d680ff7daac",
            "private_dns": "ip-10-1-1-45.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.45",
            "public_dns": "ec2-18-212-195-152.compute-1.amazonaws.com",
            "public_ip": "18.212.195.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09c41da803163a503",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0286a5bcd8b1c59ee",
            "tags": {
              "Name": "KlantA-ProdWebserver-3"
            },
            "tags_all": {
              "Name": "KlantA-ProdWebserver-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06fda8284ffc6f204"
            ]
          },
          "dependencies": [
            "module.securitygroup.aws_security_group.ssh_http_https_outbound_allow",
            "module.vpc.aws_subnet.Subnet",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_http_https_outbound_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:security-group/sg-06fda8284ffc6f204",
            "description": "Allow SSH HTTP and HTTPS",
            "egress": [],
            "id": "sg-06fda8284ffc6f204",
            "ingress": [],
            "name": "ssh_http_https_outbound_allow",
            "name_prefix": "",
            "owner_id": "519093654264",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh_http_https_allow"
            },
            "tags_all": {
              "Name": "ssh_http_https_allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0624013714e9b71a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "Allow_Outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:security-group-rule/sgr-0b837c68e0fae8e15",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b837c68e0fae8e15",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06fda8284ffc6f204",
            "security_group_rule_id": "sgr-0b837c68e0fae8e15",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securitygroup.aws_security_group.ssh_http_https_outbound_allow",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Allow_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:security-group-rule/sgr-0327754e67120b0a7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0327754e67120b0a7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06fda8284ffc6f204",
            "security_group_rule_id": "sgr-0327754e67120b0a7",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securitygroup.aws_security_group.ssh_http_https_outbound_allow",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Allow_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:security-group-rule/sgr-09870399bee31b5e1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-09870399bee31b5e1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06fda8284ffc6f204",
            "security_group_rule_id": "sgr-09870399bee31b5e1",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securitygroup.aws_security_group.ssh_http_https_outbound_allow",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Allow_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:security-group-rule/sgr-0866da71e765d5904",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0866da71e765d5904",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06fda8284ffc6f204",
            "security_group_rule_id": "sgr-0866da71e765d5904",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securitygroup.aws_security_group.ssh_http_https_outbound_allow",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.test",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c614dee691cbbf37",
            "arn": "arn:aws:ec2:us-east-1:519093654264:instance/i-0672eb4735fd5bef7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0672eb4735fd5bef7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a3c8ba454bc8d914",
            "private_dns": "ip-10-1-1-34.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.34",
            "public_dns": "ec2-44-202-249-123.compute-1.amazonaws.com",
            "public_ip": "44.202.249.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d6205fed71f428b1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0286a5bcd8b1c59ee",
            "tags": {
              "Name": "KlantA-TestWebserver"
            },
            "tags_all": {
              "Name": "KlantA-TestWebserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06fda8284ffc6f204"
            ]
          },
          "dependencies": [
            "module.securitygroup.aws_security_group.ssh_http_https_outbound_allow",
            "module.vpc.aws_subnet.Subnet",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:internet-gateway/igw-098ec76860fd2ca0e",
            "id": "igw-098ec76860fd2ca0e",
            "owner_id": "519093654264",
            "tags": {
              "Name": "MainKlantA"
            },
            "tags_all": {
              "Name": "MainKlantA"
            },
            "vpc_id": "vpc-0624013714e9b71a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:route-table/rtb-0f532541ef2bafe73",
            "id": "rtb-0f532541ef2bafe73",
            "owner_id": "519093654264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-098ec76860fd2ca0e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RouteTableKlantA"
            },
            "tags_all": {
              "Name": "RouteTableKlantA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0624013714e9b71a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07121a80f5c62d082",
            "route_table_id": "rtb-0f532541ef2bafe73",
            "subnet_id": "subnet-0286a5bcd8b1c59ee"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.RouteTable",
            "module.vpc.aws_subnet.Subnet",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:subnet/subnet-0286a5bcd8b1c59ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0286a5bcd8b1c59ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "519093654264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnetKlantA"
            },
            "tags_all": {
              "Name": "PublicSubnetKlantA"
            },
            "vpc_id": "vpc-0624013714e9b71a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:vpc/vpc-0624013714e9b71a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-094f94b5ca833e314",
            "default_route_table_id": "rtb-0e447ccc6a87865e9",
            "default_security_group_id": "sg-072167d4dde01ddd3",
            "dhcp_options_id": "dopt-0450b3d63ee435195",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0624013714e9b71a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e447ccc6a87865e9",
            "owner_id": "519093654264",
            "tags": {
              "Name": "VPCKlantA"
            },
            "tags_all": {
              "Name": "VPCKlantA"
            }
          }
        }
      ]
    }
  ]
}